<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="#dee2e4"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".Home">

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        app:popupTheme="@style/PopupStyle">

        <TextView
            android:id="@+id/tb_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000000" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/ketRoute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/route"
                android:textColor="#34495e"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnChooseTrayek"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_view_background"
                android:elevation="30dp"
                android:text="TRAYEK" />

            <LinearLayout
                android:id="@+id/linearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tvNamaTrayek"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.7"
                        android:text="Nama Trayek :"
                        android:textSize="15dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvNamaTrayek2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1.3"
                        android:text=""
                        android:textSize="15dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tvIdTrayek"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.7"
                        android:text="Trayek Id :"
                        android:visibility="gone"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/tvIdTrayek2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1.3"
                        android:visibility="gone"
                        android:text=""
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tvCompanyTrayek"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:layout_margin="10dp"
                        android:text="Company Id :"
                        android:visibility="gone"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/tvCompanyTrayek2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:layout_margin="10dp"
                        android:visibility="gone"
                        android:text=""
                        android:textSize="15dp"/>
                </LinearLayout>


            </LinearLayout>

            <!--<Spinner-->
            <!--android:id="@+id/spinnerRoute"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:spinnerMode="dropdown">-->

            <!--</Spinner>-->


            <TextView
                android:id="@+id/ketCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/kondisi"
                android:textColor="#34495e"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_view_background"
                android:elevation="5dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerCond"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/kondisi">

                </Spinner>

            </LinearLayout>


            <Button
                android:id="@+id/btnChooseImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/ic_image"
                android:elevation="30dp"
                android:text="@string/chooseImg" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/ketDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="#34495e"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_view_background"
                android:elevation="5dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="7"
                android:maxLines="10"
                android:minLines="4" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_style"
                android:elevation="10dp"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="#ffffff" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>